# objcaller

./: .gitignore  CMakeLists.txt  README.md
include/: call.h  loader.h  settings.h  test.h
src/: call.c  loader.c  main.c  options.c  settings.c  test.c
test/: main.c  test.c  test.h
